- added position fixed and overflow auto

--- a/src/app/components/user-recipe-detail-page/user-recipe-detail-page.component.less
+++ b/src/app/components/user-recipe-detail-page/user-recipe-detail-page.component.less
@@ -8,6 +8,7 @@
   height: 100%;
   background-color: white;
   width: 100%;
+  overflow: auto;
 }
 
 .container {
@@ -20,7 +21,7 @@
 }
 
 #close-btn {
-  position: absolute;
+  position: fixed;
   right: 1rem;
   font-size: 3rem;
 }
